yaml/kuber-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-search-generic-api-deployment
  namespace: __NAMESPACE__
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        logging: enabled
    spec:
      containers:
        - name: api
          image: __REGISTRY__/qa-search/generic/search-api:||version||
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-search-generic-integration-deployment
  namespace: __NAMESPACE__
  labels:
    app: integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integration
  template:
    metadata:
      labels:
        app: integration
        logging: enabled
    spec:
      containers:
        - name: integration
          image: __REGISTRY__/qa-search/generic/search-integration:||version||
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-search-generic-admin-deployment
  namespace: __NAMESPACE__
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
        logging: enabled
    spec:
      containers:
        - name: admin
          image: __REGISTRY__/qa-search/generic/search-admin:||version||
          ports:
            - containerPort: 80
